[package]
name = "stak-native"
version.workspace = true
edition.workspace = true
description = "Optimized primitives of native functions for Stak Scheme"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
stak-vm = { path = "../vm", version = "0.12.16" }
winter-maybe-async = "0.13.1"

[dev-dependencies]
stak-util = { path = "../util" }

[features]
async = ["stak-vm/async", "winter-maybe-async/async"]

[lints]
workspace = true
