[package]
name = "stak-primitive"
description = "Stak Scheme primitives"
version = "0.5.14"
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
heapless = "0.8.0"
libm = { version = "0.2.8", default-features = false }
stak-device = { version = "0.2.56", path = "../device" }
stak-file = { version = "0.4.14", path = "../file" }
stak-process-context = { version = "0.2.14", path = "../process_context" }
stak-vm = { version = "0.5.14", path = "../vm" }
