[package]
name = "stak-process-context"
description = "Process context for Stak Scheme"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
async = ["stak-vm/async", "winter-maybe-async/async"]
libc = []
std = []

[lints]
workspace = true

[dependencies]
stak-vm = { version = "0.10.28", path = "../vm" }
winter-maybe-async = "0.13.0"
