[package]
name = "stak-process-context"
version.workspace = true
edition.workspace = true
description = "Process context for Stak Scheme"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
stak-vm = { path = "../vm", version = "0.11.2" }
winter-maybe-async = "0.13.1"

[features]
async = ["stak-vm/async", "winter-maybe-async/async"]
libc = []
std = []

[lints]
workspace = true
