[package]
name = "stak-profiler"
description = "Profiling for Stak Scheme"
version.workspace = true
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
stak-vm = { version.workspace = true}

[dev-dependencies]
indoc = "2.0.5"
pretty_assertions = "1.4.1"

[lints]
workspace = true
