[package]
name = "stak-profiler"
version.workspace = true
edition.workspace = true
description = "Profiling for Stak Scheme"
readme.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
stak-vm = { version = "0.10.37", path = "../vm" }

[dev-dependencies]
indoc = "2.0.6"
pretty_assertions = "1.4.1"

[lints]
workspace = true
