[package]
name = "stak-profiler"
version.workspace = true
edition.workspace = true
description = "Profiling for Stak Scheme"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
stak-vm = { path = "../vm", version = "0.12.11" }

[dev-dependencies]
indoc = "2.0.7"
pretty_assertions = "1.4.1"

[lints]
workspace = true
