[package]
name = "stak-program"
version = "0.1.0"
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[features]
hot-reload = ["hmr"]

[dependencies]
cfg-exif = "0.3.1"
hmr = { version = "0.2.0", optional = true }

[lints]
workspace = true
