[package]
name = "stak"
version.workspace = true
edition.workspace = true
description = "Stak Scheme interpreter"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
stak-device = { version = "0.11.1", path = "../device" }
stak-dynamic = { version = "0.11.1", optional = true, path = "../dynamic" }
stak-engine = { version = "0.11.1", optional = true, path = "../engine" }
stak-file = { version = "0.11.1", path = "../file" }
stak-macro = { version = "0.11.1", path = "../macro" }
stak-module = { version = "0.11.1", path = "../module" }
stak-process-context = { version = "0.11.1", path = "../process_context" }
stak-r7rs = { version = "0.11.1", path = "../r7rs" }
stak-sac = { version = "0.11.1", path = "../sac" }
stak-time = { version = "0.11.1", path = "../time" }
stak-vm = { version = "0.11.1", path = "../vm" }

[dev-dependencies]
any-fn = "0.6.1"
rand = "0.9.2"
stak-build = { path = "../build" }

[build-dependencies]
stak-build = { version = "0.11.1", path = "../build" }

[features]
alloc = ["dep:stak-dynamic", "dep:stak-engine"]
async = [
  "stak-device/async",
  "stak-dynamic/async",
  "stak-engine/async",
  "stak-file/async",
  "stak-process-context/async",
  "stak-r7rs/async",
  "stak-time/async",
  "stak-vm/async",
]
default = ["float", "std"]
float = ["stak-sac/float", "stak-vm/float"]
float62 = ["stak-sac/float", "stak-vm/float62"]
hot-reload = ["stak-macro/hot-reload"]
libc = [
  "stak-device/libc",
  "stak-engine/libc",
  "stak-file/libc",
  "stak-process-context/libc",
  "stak-sac/libc",
  "stak-time/libc",
]
std = [
  "alloc",
  "stak-device/std",
  "stak-engine/std",
  "stak-file/std",
  "stak-process-context/std",
  "stak-sac/std",
  "stak-time/std",
]

[lints]
workspace = true
