[package]
name = "stak"
version.workspace = true
edition.workspace = true
description = "Stak Scheme interpreter"
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
stak-device = { workspace = true }
stak-dynamic = { workspace = true, optional = true }
stak-engine = { workspace = true, optional = true }
stak-file = { workspace = true }
stak-macro = { workspace = true }
stak-module = { workspace = true }
stak-process-context = { workspace = true }
stak-r7rs = { workspace = true }
stak-sac = { workspace = true }
stak-time = { workspace = true }
stak-vm = { workspace = true }

[dev-dependencies]
any-fn = "0.6.3"
rand = "0.9.2"
stak-build = { path = "../build" }

[build-dependencies]
stak-build = { workspace = true }

[features]
default = ["float", "std"]
alloc = ["dep:stak-dynamic", "dep:stak-engine"]
async = [
  "stak-device/async",
  "stak-dynamic/async",
  "stak-engine/async",
  "stak-file/async",
  "stak-process-context/async",
  "stak-r7rs/async",
  "stak-time/async",
  "stak-vm/async",
]
float = ["stak-sac/float", "stak-vm/float"]
float62 = ["stak-sac/float", "stak-vm/float62"]
hot-reload = ["stak-macro/hot-reload"]
libc = [
  "stak-device/libc",
  "stak-engine/libc",
  "stak-file/libc",
  "stak-process-context/libc",
  "stak-sac/libc",
  "stak-time/libc",
]
std = [
  "alloc",
  "stak-device/std",
  "stak-engine/std",
  "stak-file/std",
  "stak-process-context/std",
  "stak-sac/std",
  "stak-time/std",
]

[lints]
workspace = true
