[package]
name = "stak-engine"
description = "Stak Scheme scripting engine for Rust"
version = "0.1.0"
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[features]
std = ["stak-device/std"]

[dependencies]
stak-device = { version = "0.2.93", path = "../device" }
stak-file = { version = "0.5.7", path = "../file" }
stak-process-context = { version = "0.2.51", path = "../process_context" }
stak-r7rs = { version = "0.9.7", path = "../r7rs" }
stak-time = { version = "0.1.34", path = "../time" }
stak-vm = { version = "0.7.22", path = "../vm" }

[lints]
workspace = true
